--- a/frontend_web/package.json
+++ b/frontend_web/package.json
@@ -15,9 +15,11 @@
     "@fontsource/roboto": "^5.1.1",
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
+    "chart.js": "^4.4.7",
     "install": "^0.13.0",
     "npm": "^11.0.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1"
   },
